JST-687: fix timer position on main page, and channel name display in channel page

--- a/src/styles/main_page/main_mobile.css
+++ b/src/styles/main_page/main_mobile.css
@@ -89,6 +89,10 @@
     overflow: visible;
   }
 
+  .item-time {
+    left: 232px;
+  }
+
   .recomended-content-item,
   .channel-content-item {
     width: 288px;
