--- a/src/styles/channel_page/channel_mobile.css
+++ b/src/styles/channel_page/channel_mobile.css
@@ -99,6 +99,12 @@
     visibility: hidden;
   }
 
+  h2:first-child {
+    margin-top: -1px;
+    position: static;
+    visibility: visible;
+  }
+
   main {
     flex-direction: column-reverse;
     align-items: center;
@@ -119,6 +125,10 @@
   .channel-content-item {
     width: 288px;
     height: 200px;
+  }
+
+  .channel-content-item:first-child {
+    margin-top: 1px;
   }
 
   .recomended-content-item img,
